在2g/3g下不显示图片

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,10 @@
             android:icon="@drawable/ic_launcher"
             android:name=".activity.SettingActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:icon="@drawable/ic_launcher"
+            android:name=".activity.ShowImgActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:icon="@drawable/ic_launcher"
             android:name=".activity.AboutActivity"
