--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:icon="@drawable/ic_launcher"
+            android:name=".activity.WhatActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:icon="@drawable/ic_launcher"
             android:name=".activity.AboutActivity"
             android:screenOrientation="portrait">
             <intent-filter>
